# sgd

./: CMakeLists.txt  GameLoop.cpp  GameLoop.h  Sgd.sln  Texture.cpp  Texture.h  main.cpp
Sgd/: Background.cpp  Background.h  Bird.cpp  Bird.h  Border.cpp  Border.h  CollisionManager.cpp  CollisionManager.h  GameLoop.cpp  Gameloop.h  Sgd.vcxproj  Sgd.vcxproj.filters  TextureMenager.cpp  TextureMenager.h  main.cpp  object.cpp  object.h
Sgd/x64/Debug/: Sgd.exe.recipe  Sgd.ilk  vc143.idb
Sgd/x64/Debug/Sgd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sgd.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
